またdistccを有効にしてみた。

--- a/make.conf
+++ b/make.conf
@@ -58,7 +58,7 @@ GRUB_PLATFORMS="pc"
 
 #FEATURES="digest distcc"
 #FEATURES="distcc collision-protect"
-#FEATURES="distcc"
+FEATURES="distcc"
 #FEATURES="digest"
 
 #EMERGE_DEFAULT_OPTS="--autounmask=n"
