Update for portage-2.2_rc11 (from 2.2.1)

--- a/make.conf
+++ b/make.conf
@@ -63,7 +63,7 @@ FEATURES="distcc"
 
 #EMERGE_DEFAULT_OPTS="--autounmask=n"
 
-SYNC="rsync://brunhilde/gentoo-portage/"
+#SYNC="rsync://brunhilde/gentoo-portage/"
 #GENTOO_MIRRORS="ftp://ftp.ecc.u-tokyo.ac.jp/GENTOO http://gentoo.gg3.net/ ftp://gg3.net/pub/linux/gentoo/ http://mirror.gentoo.gr.jp" 
 #GENTOO_MIRRORS="http://gentoo.gg3.net/ ftp://gg3.net/pub/linux/gentoo/"
 
@@ -79,3 +79,9 @@ PORTAGE_ELOG_CLASSES="log warn error qa"
 #PORTAGE_ELOG_SYSTEM="custom:* echo mail"
 PORTAGE_ELOG_SYSTEM="custom:* echo"
 PORTAGE_ELOG_COMMAND="/usr/bin/gentwoo '${PACKAGE}' '${LOGFILE}'"
+
+# Set PORTDIR for backward compatibility with various tools:
+#   gentoo-bashcomp - bug #478444
+#   euse - bug #474574
+#   euses and ufed - bug #478318
+PORTDIR="/usr/portage"
