make.conf: Added USE flag "ssse3".

--- a/make.conf
+++ b/make.conf
@@ -31,7 +31,7 @@ USE="X kde kde4 qt qt4 qt3support immqt tcl tk Xaw3d gtk gtk3 truetype kpathsea 
      xscrensaver xinerama sdl
      dga -directfb fbcon svga -ggi opengl xcomposite xv
      acpi usb joystick dbus ieee1394 policykit lm_sensors bluetooth semantic-desktop
-     mmx mmxext sse sse2 sse3 3dnow 3dnowext mmap kqemu
+     mmx mmxext sse sse2 sse3 ssse3 3dnow 3dnowext mmap kqemu
      logrotate
      vim-syntax doc htmlhandbook offensive branding
      static-libs
