--- a/make.conf
+++ b/make.conf
@@ -49,7 +49,7 @@ CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
          samsung sierra sipix_blink sipix_blink2 sipix_web2 smal sonix sony_dscf1
          sony_dscf55 soundvision spca50x sq905 stv0674 stv0680 sx330z template
          toshiba_pdrm11 panasonic_dc1580"
-RUBY_TARGETS="ruby18 ruby19"
+RUBY_TARGETS="ruby18 ruby19 ruby20 ruby21"
 XTABLES_ADDONS="checksum dnetmap echo gradm ipset6 account \
                 chaos condition delude dhcpmac fuzzy geoip iface ipmark \
                 ipp2p ipv4options length2 logmark lscan pknock \
