Workaround for GCC Bugzilla Bug 50506

--- a/make.conf
+++ b/make.conf
@@ -3,6 +3,8 @@
 #CFLAGS="-O2 -mtune=i686 -pipe"
 #CFLAGS="-O2 -march=opteron -mtune=opteron -pipe"
 CFLAGS="-O3 -march=native -mtune=native -msse4a -mfma -mfma4 -mxop -pipe -ftree-vectorize -ftree-loop-optimize"
+# Workaround for GCC Bugzilla Bug 50506
+CFLAGS="$CFLAGS -fno-ipa-cp"
 CHOST="x86_64-pc-linux-gnu"
 CXXFLAGS="$CFLAGS"
 FFLAGS="$CFLAGS"
