--- a/make.conf
+++ b/make.conf
@@ -14,7 +14,7 @@ PORTAGE_NICENESS="5"
 
 LINGUAS="ja en de fr la"
 USE="X kde kde4 qt qt4 qt3support immqt tcl tk Xaw3d gtk gtk3 truetype kpathsea -gnome glib webkit
-     cjk i18n nls unicode m17n-lib spell migemo anthy -chasen
+     cjk i18n nls unicode m17n-lib spell anthy -chasen
      ldap kerberos ldap skey krb4 sasl acl curl caps nptlonly avahi webdav zeroconf xattr
      slp samba odbc nas nis sql mysql gnutls fuse firefox cups -eds
      threads accessibility
@@ -51,7 +51,7 @@ CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
          samsung sierra sipix_blink sipix_blink2 sipix_web2 smal sonix sony_dscf1
          sony_dscf55 soundvision spca50x sq905 stv0674 stv0680 sx330z template
          toshiba_pdrm11 panasonic_dc1580"
-RUBY_TARGETS="ruby18 ruby19 ruby20 ruby21"
+RUBY_TARGETS="ruby19 ruby20"
 XTABLES_ADDONS="checksum dnetmap echo gradm ipset6 account \
                 chaos condition delude dhcpmac fuzzy geoip iface ipmark \
                 ipp2p ipv4options length2 logmark lscan pknock \
