USEフラグにmultilib追加 (プロファイルから外されたみたいなので)。

--- a/make.conf
+++ b/make.conf
@@ -36,7 +36,7 @@ USE="X kde kde4 qt qt4 qt3support immqt tcl tk Xaw3d gtk gtk3 truetype kpathsea 
      mmx mmxext sse sse2 sse3 ssse3 3dnow 3dnowext mmap kqemu
      logrotate
      vim-syntax doc htmlhandbook offensive branding
-     static-libs
+     static-libs multilib
      "
 #VIDEO_CARDS="vesa ati radeon vga fglrx"
 VIDEO_CARDS="vesa ati radeon vga radeonhd fglrx"
