make.conf: Change compiler to clang and reverted.

--- a/make.conf
+++ b/make.conf
@@ -1,8 +1,11 @@
 # These settings were set by the catalyst build script that automatically built this stage
 # Please consult /etc/make.conf.example for a more detailed example
+#CC=clang
+#cXX=clang++
 #CFLAGS="-O2 -mtune=i686 -pipe"
 #CFLAGS="-O2 -march=opteron -mtune=opteron -pipe"
 CFLAGS="-O3 -march=native -mtune=native -msse4a -mfma -mfma4 -mxop -pipe -ftree-vectorize -ftree-loop-optimize"
+#CFLAGS="-O3 -march=native -mtune=native -msse4a -mfma -mfma4 -mxop -pipe -ftree-vectorize"
 # Workaround for GCC Bugzilla Bug 50506
 CFLAGS="$CFLAGS -fno-ipa-cp"
 CHOST="x86_64-pc-linux-gnu"
