Some changes: related to Rust, amdgpu, ...

--- a/make.conf
+++ b/make.conf
@@ -31,7 +31,7 @@ LINGUAS="ja en de fr la"
 
 CPU_FLAGS_X86="aes popcnt mmx mmxext sse sse2 sse3 ssse3 sse4_1 sse4_2 sse4a avx xop fma3 fma4"
 #VIDEO_CARDS="vesa ati radeon vga radeonhd fglrx"
-VIDEO_CARDS="vesa ati radeon vga radeonsi amdgpu"
+VIDEO_CARDS="radeon radeonsi amdgpu"
 INPUT_DEVICES="mouse keyboard joystick wacom libinput evdev"
 ALSA_CARDS="ice1712 ice1724 hda-intel usb-audio usb-usx2y mpu401 dummy seq-dummy serial-u16550 soc virmidi virtuoso"
 CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
