--- a/make.conf
+++ b/make.conf
@@ -17,9 +17,9 @@ MAKEOPTS="-j34"
 # profile used for building.
 USE="bindist mmx sse sse2
      cjk nls utf8 icu idn
-     wayland gles gles2 opengl truetype
+     -wayland -gles -gles2 -egl opengl opencl truetype
      alsa jack pulseaudio sndfile
-     ffmpeg -libav
+     ffmpeg -libav aacs bluray bdplus
      zlib gzip bz2 lzma lzo xz
      subversion git cvs bazaar mercurial
      perl python lua ruby cscope
@@ -31,7 +31,7 @@ LINGUAS="ja en de fr la"
 
 CPU_FLAGS_X86="aes popcnt mmx mmxext sse sse2 sse3 ssse3 sse4_1 sse4_2 sse4a avx xop fma3 fma4"
 #VIDEO_CARDS="vesa ati radeon vga radeonhd fglrx"
-VIDEO_CARDS="radeon radeonsi amdgpu"
+VIDEO_CARDS="fglrx radeon radeonsi amdgpu"
 INPUT_DEVICES="mouse keyboard joystick wacom libinput evdev"
 ALSA_CARDS="ice1712 ice1724 hda-intel usb-audio usb-usx2y mpu401 dummy seq-dummy serial-u16550 soc virmidi virtuoso"
 CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
@@ -43,7 +43,7 @@ CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
          samsung sierra sipix_blink sipix_blink2 sipix_web2 smal sonix sony_dscf1
          sony_dscf55 soundvision spca50x sq905 stv0674 stv0680 sx330z template
          toshiba_pdrm11 panasonic_dc1580"
-RUBY_TARGETS="ruby19 ruby20"
+RUBY_TARGETS="ruby20 ruby21"
 XTABLES_ADDONS="checksum dnetmap echo gradm ipset6 account \
                 chaos condition delude dhcpmac fuzzy geoip iface ipmark \
                 ipp2p ipv4options length2 logmark lscan pknock \
