Removed USE flag "bindist" from openssl and openssh

--- a/make.conf
+++ b/make.conf
@@ -15,7 +15,7 @@ MAKEOPTS="-j34"
 
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
-USE="bindist mmx sse sse2
+USE="mmx sse sse2
      cjk nls utf8 icu idn
      -wayland -gles -gles2 -egl opengl opencl truetype
      alsa jack pulseaudio sndfile
