--- a/make.conf
+++ b/make.conf
@@ -2,7 +2,7 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-CFLAGS="-O3 -march=native -mtune=native -msse4a -mfma -mfma4 -mxop -pipe -ftree-vectorize -ftree-loop-optimize"
+CFLAGS="-O3 -march=bdver2 -mtune=bdver2 -msse4a -mfma -mfma4 -mxop -pipe"
 CXXFLAGS="${CFLAGS}"
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
@@ -10,28 +10,32 @@ CHOST="x86_64-pc-linux-gnu"
 
 ABI_X86="32 64"
 
-FEATURES="distcc"
-MAKEOPTS="-j34"
+MAKEOPTS="-j128 -l32"
+#FEATURES="distcc"
+FEATURES=""
 
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 USE="mmx sse sse2
      cjk nls utf8 icu idn
+     X xkb gnome gtk gtk3 kde qt qt4 qt5 qt3support gui widgets dbus
      -wayland -gles -gles2 -egl opengl opencl truetype
-     alsa jack pulseaudio sndfile
+     alsa jack pulseaudio sndfile opus flac
+     jpeg png apng jpeg2k
+     grub plymouth
      ffmpeg -libav aacs bluray bdplus
-     zlib gzip bz2 lzma lzo xz
+     zlib gzip bz2 lzma lzo xz minizip
      subversion git cvs bazaar mercurial
      perl python lua ruby cscope
      vim-syntax
-     caps acl
-     static-libs"
+     systemd fuse udisks
+     caps acl"
 
 LINGUAS="ja en de fr la"
 
 CPU_FLAGS_X86="aes popcnt mmx mmxext sse sse2 sse3 ssse3 sse4_1 sse4_2 sse4a avx xop fma3 fma4"
 #VIDEO_CARDS="vesa ati radeon vga radeonhd fglrx"
-VIDEO_CARDS="fglrx radeon radeonsi amdgpu"
+#VIDEO_CARDS="fglrx radeon radeonsi amdgpu"
 INPUT_DEVICES="mouse keyboard joystick wacom libinput evdev"
 ALSA_CARDS="ice1712 ice1724 hda-intel usb-audio usb-usx2y mpu401 dummy seq-dummy serial-u16550 soc virmidi virtuoso"
 CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
@@ -43,14 +47,13 @@ CAMERAS="adc65 agfa_cl20 aox barbie canon casio_qv clicksmart310 digigr8
          samsung sierra sipix_blink sipix_blink2 sipix_web2 smal sonix sony_dscf1
          sony_dscf55 soundvision spca50x sq905 stv0674 stv0680 sx330z template
          toshiba_pdrm11 panasonic_dc1580"
-RUBY_TARGETS="ruby20 ruby21"
+RUBY_TARGETS="ruby21 ruby22"
 XTABLES_ADDONS="checksum dnetmap echo gradm ipset6 account \
                 chaos condition delude dhcpmac fuzzy geoip iface ipmark \
                 ipp2p ipv4options length2 logmark lscan pknock \
                 psd quota2 rawnat steal sysrq tarpit tee"
-GRUB_PLATFORMS="pc efi-64"
 
-
+PYTHON_TARGETS="python2_7 python3_4 python3_5"
 
 PORTDIR="/usr/portage"
 DISTDIR="${PORTDIR}/distfiles"
